--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
 	"name": "Solid Snake Bot",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "bot.js",
 	"scripts": {
-		"test": "node index.js"
+		"test": "node bot.js"
 	},
 	"author": "Jaykmeit",
 	"license": "ISC",
